force-app/main/default/objects/cdcpc__RD_Seals_Component_Material__c/cdcpc__RD_Seals_Component_Material__c.object-meta.xml
<CustomObject>
    <label>RD Seals Component Material</label>
    <nameField>
        <label>RD Seals Component Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Seals Component Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>