force-app/main/default/objects/cdcpc__RD_Seals_Component_Material__c/fields/cdcpc__Add_Metal_Seal__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Add_Metal_Seal__c</fullName>
    <label>Add Metal Seal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>