force-app/main/default/objects/cdcpc__RD_Seals_Component_Material__c/fields/cdcpc__Atex__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Atex__c</fullName>
    <label>Atex</label>
    <length>20</length>
    <type>Text</type>
</CustomField>