force-app/main/default/objects/cdcpc__RD_Seals_Component_Material__c/fields/cdcpc__MatlCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MatlCode__c</fullName>
    <label>MatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>