force-app/main/default/objects/cdcpc__RD_Seals_Component_Material__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__Atex__c</columns>
    <columns>cdcpc__MatlCode__c</columns>
    <columns>cdcpc__NACE__c</columns>
    <columns>cdcpc__Non_Fragmenting__c</columns>
    <columns>cdcpc__PressLL__c</columns>
    <columns>cdcpc__PressUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>